chore: small refactor